@@ -3,6 +3,8 @@ CASprzak is a Computer Algebra System (CAS) written by The EasyKayzey Show (Erez
 
 Hello, and welcome to our CAS. This is a joint project by The EasyKayzey Show started at HackBCA V, 2020. CASprzak is a computer-algebra framework mainly for storing, modifying, and applying mathematical functions and functionals, and it is written completely in native Java 14 with no external libraries (except JUnit for testing purposes only).
 
+All documentation for CASprzak can be found at: https://ezkz.show/CASprzak-documentation/.
+
 ## Functionality
 ### Core
 - Storage of functions in an artificial data type
@@ -26,17 +28,20 @@ Hello, and welcome to our CAS. This is a joint project by The EasyKayzey Show st
   - Generating taylor series of functions from a point
   - Defining special constants
   - Defining and removing variables
-  - Demo - to start the demo, run `CommandUI` and input `demo`
+  - Demo command demonstrating core features
+
+## Usage
+1. Download the latest release jar from the `Releases` tab
+2. Ensure you are running Java 14
+3. Launch the program in your favorite command line using `java -jar --enable-preview CASprzak.jar` 
 
 ## Notes
 - If you find a problem with the CAS, please report the bug in `Issues` so we can fix it
 - If you have any feature suggestions not present in `Projects`, make a feature request in `Issues`
 - If you would like to design a better interface than the placeholder that we have now, please contact us by email
-- As noted before, to begin the demo, run `CommandUI` and input `demo`
-- All documentation can be found at: https://ezkz.show/CASprzak-documentation/
 - To use `cas.properties`:
-   - If you are using a binary, put the file in the same directory as `CASprzak.jar`
-   - If you are using the source code, leave the file in `src/config`.
+   - If you are using the jar, put the file in the same directory as `CASprzak.jar`
+   - If you are using the source code, leave the file in `src/config`
 - Binaries are available for all stable releases under the `Releases` tab
 
 ## Contacts
